fixed smol where emotes would overlapped if spammed together

--- a/assets/chat/css/generify.scss
+++ b/assets/chat/css/generify.scss
@@ -19,7 +19,7 @@
 
 .smol {
     transform: scaleX(0.5) scaleY(0.5);
-    margin: -30px -15px -15px -15px;
+    margin: -15px -10px -15px -10px;
     transition: all 0.2s;
 }
 
